add lerna publish github action

--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,9 @@
 {
   "packages": [
-    "packages/*",
-    "apps/*"
+    "packages/*"
   ],
-  "version": "0.1.0-alpha.0",
+  "version": "0.1.0-alpha.11",
   "useWorkspaces": true,
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "includeMergedTags": true
 }
