--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@workhard/react-components",
-  "version": "0.1.0-alpha.0",
+  "description": "Component library",
+  "version": "0.1.0-alpha.11",
   "main": "dist/index",
   "types": "dist/index",
   "license": "GPL-3.0",
@@ -15,8 +16,8 @@
     "react": "~17.0.0"
   },
   "dependencies": {
-    "@workhard/react-core": "^0.1.0-alpha.0",
-    "@workhard/react-utils": "^0.1.0-alpha.0",
+    "@workhard/react-core": "^0.1.0-alpha.11",
+    "@workhard/react-utils": "^0.1.0-alpha.11",
     "react-bootstrap": "^1.4.3",
     "recharts": "^2.0.9"
   },
@@ -28,5 +29,6 @@
     "@types/react-bootstrap": "^0.32.25",
     "react": "~17.0.0",
     "react-dom": "~17.0.0"
-  }
+  },
+  "gitHead": "426ee5e0a1eebb510c790c57c8f64c645226eb97"
 }
