--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@workhard/react-monorepo",
   "description": "Workhard Dev Kit for DAO Builders",
   "private": true,
+  "version": "0.1.0-alpha.0",
   "workspaces": [
     "packages/*",
     "apps/*"
@@ -13,7 +14,20 @@
     "pub": "lerna publish",
     "test": "lerna run test",
     "lint": "eslint --ext js,ts,tsx .",
-    "start": "lerna run start --scope=@workhard/frontend-v1 --stream"
+    "start": "lerna run start --scope=@workhard/frontend-v1 --stream",
+    "versionup": "lerna version --conventional-commits --no-git-tag-version",
+    "versionup:prepatch": "lerna version prepatch --conventional-commits --no-git-tag-version",
+    "versionup:patch": "lerna version patch --conventional-commits --no-git-tag-version",
+    "versionup:preminor": "lerna version preminor --conventional-commits --no-git-tag-version",
+    "versionup:minor": "lerna version minor --conventional-commits --no-git-tag-version",
+    "versionup:premajor": "lerna version premajor --conventional-commits --no-git-tag-version",
+    "versionup:major": "lerna version major --conventional-commits --no-git-tag-version",
+    "postversionup": "npm run commit-version",
+    "postversionup:patch": "npm run commit-version",
+    "postversionup:minor": "npm run commit-version",
+    "postversionup:major": "npm run commit-version",
+    "commit-version": "git add . && git commit -m \"chore(release): publish `node -p 'require(\"./lerna.json\").version'`\"",
+    "release": "lerna publish from-package"
   },
   "devDependencies": {
     "@nighttrax/eslint-config-tsx": "~8.0.0",
