--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@workhard/react-components",
+  "description": "Component library",
   "version": "0.1.0-alpha.0",
   "main": "dist/index",
   "types": "dist/index",
