--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@workhard/react-utils",
+  "description": "Utility Lib for WHF app",
   "version": "0.1.0-alpha.0",
   "main": "dist/index",
   "types": "dist/index",
