--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
-  "packages": ["packages/*", "apps/*"],
-  "version": "0.1.0-alpha.0",
+  "packages": [
+    "packages/*",
+    "apps/*"
+  ],
+  "version": "0.1.0-alpha.1",
   "useWorkspaces": true,
   "npmClient": "yarn",
   "includeMergedTags": true,
