--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,9 @@ jobs:
       - run: yarn lerna version ${{ github.event.release.tag_name }} --yes --no-git-tag-version
       - run: yarn version --new-version ${{ github.event.release.tag_name }} --no-git-tag-version
       - run: git add . && git commit -m "Release ${{ github.event.release.tag_name }}"
+      - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: yarn lerna publish from-package --yes --no-verify-access
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
