--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.1.0-alpha.11",
+  "version": "0.1.0",
   "useWorkspaces": true,
   "npmClient": "yarn",
   "includeMergedTags": true
